Tests/RunCMake/Instrumentation/bad-query-stderr.txt
^CMake Error: +
Error: @3,42: Not a valid query: "bad query"
  "queries": \["staticSystemInformation", "bad query"\]
                                         \^$
